HW-3: lib: added errs; social: added transactions; modified readme
